# jinrou_sys

./: default_13.yml  default_5.yml  pyproject.toml
src/: main.py
src/agent/: agent.py  bodyguard.py  medium.py  possessed.py  seer.py  villager.py  werewolf.py
src/utils/: __init__.py  llm_client.py  prompt_manager.py
